# liquid-glass-app-icon

./: .gitignore  README.md  pyproject.toml
.claude/skills/icon-generate/: SKILL.md
Example/rocket-icon-composer.icon/: icon.json
Icon Composer Layers/: 2026-02-20_121904_a-rocket_v1.json  2026-02-20_122006_a-rocket_v2.json  2026-02-20_122109_a-rocket_v3.json  2026-02-20_122837_a-rocket_v1.json  2026-02-20_122837_a-rocket_v1_edit1.json  2026-02-20_123000_a-rocket_v2.json  2026-02-20_123125_a-rocket_v3.json  2026-02-20_123539_a-rocket-deep-burnt-orange-silhouette-co_v1.json
icon_skill/: __init__.py  __main__.py  main.py  openai_client.py  prompt_compiler.py  storage.py  validators.py
